--- a/index.html
+++ b/index.html
@@ -1,18 +1,8 @@
 
 <!DOCTYPE html>
 <html>
-    <style>
-      gmp-map {
-        height: 100%;
-      }
-      html,
-      body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-    </style>
     <head>
+        <link rel="stylesheet" href="landmark.css">
         <script
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvgdXznWcLROFmLIUhK7g4oGri6tK94Qs&libraries=maps,marker"
             defer>
@@ -23,8 +13,8 @@
             <label for="title">Title:</label>
             <input type="text" id="title"><br/>
             <label for="description">Description:</label>
-            <textarea id="description" rows="5" cols="50">Please enter a description of 1-3 sentences</textarea><br/>
-            <label for="upload">Please select a file:</label>
+            <textarea id="description">Please enter a description of 1-3 sentences</textarea><br/>
+            <label for="upload">Please select an image of the landmark:</label>
             <input type="file" id="upload" accept="image/*, .jpg, .jpeg, .png, .gif, .webp"><br/>
             <input type="button" id="create" value="Create Landmark">
         </form>
