--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input type="button" id="create" value="Create Landmark">
         </form>
         <div id="map">
-            <gmp-map center="43.2375, -79.8341" zoom="13" map-id="DEMO_MAP_ID" style="height: 400px"></gmp-map>
+            <gmp-map center="43.2375, -79.8341" zoom="13" map-id="DEMO_MAP_ID"></gmp-map>
         </div>
         <script src="landmark.js"></script>
     </body>
